assets/queries/cloudFormation/aws/elb_sensitive_port_is_exposed_to_entire_network/test/negative2.yaml
# Test classic load balancing - LoadBalancer security groups with stand alone ingresses
Resources:
  LoadBalancer01:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Listeners:
        - LoadBalancerPort: 80
          InstancePort: 80
          Protocol: HTTP
      SecurityGroups:
        - !Ref Negative2SecurityGroup

  Negative2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for negative test cases"
      VpcId: !Ref MyVPC

# IPv4 Rules
  Negative2IPv4Ingress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative2SecurityGroup
      IpProtocol: "icmp"      # incorrect protocol
      FromPort: 22
      ToPort: 22
      CidrIp: "10.0.0.0/0"

  Negative2IPv4Ingress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 5000      # unknown port
      ToPort: 5000
      CidrIp: "192.168.0.0/0"

  Negative2IPv4Ingress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative2SecurityGroup
      IpProtocol: "udp"
      FromPort: 22
      ToPort: 22
      CidrIp: "8.8.0.0/16"  # incorrect cidr (not exposed)

  Negative2IPv4Ingress4:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative2SecurityGroup # all fields "incorrect"
      IpProtocol: "icmp"
      FromPort: 5000
      ToPort: 5000
      CidrIp: "8.8.0.0/16"

# IPv6 Rules
  Negative2IPv6Ingress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative2SecurityGroup
      IpProtocol: "58"  # protocol number 58 is "icmpv6" = incorrect protocol
      FromPort: 22
      ToPort: 22
      CidrIpv6: "fd00::/0"

  Negative2IPv6Ingress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 5000    # unknown port
      ToPort: 5000
      CidrIpv6: "fd12:3456:789a::1/0"

  Negative2IPv6Ingress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative2SecurityGroup
      IpProtocol: "udp"
      FromPort: 22
      ToPort: 22
      CidrIpv6: "2400:cb00::/32"  # incorrect cidr (not exposed)

  Negative2IPv6Ingress4:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Negative2SecurityGroup   # all fields "incorrect"
      IpProtocol: "58"  # ICMPv6
      FromPort: 5000
      ToPort: 5000
      CidrIpv6: "2400:cb00::/32"
