assets/queries/cloudFormation/aws/elb_sensitive_port_is_exposed_to_entire_network/test/positive1.yaml
Resources:
  LoadBalancer01:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Listeners:
        - LoadBalancerPort: 80
          InstancePort: 80
          Protocol: HTTP
      SecurityGroups:
        - !Ref Positive1IPv4_1
        - !Ref Positive1IPv4_2
        - !Ref Positive1ArrayTestIPv4

  Positive1IPv4_1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow all protocols on port 22 from 10.0.0.0/0"
      SecurityGroupIngress:
        - IpProtocol: "-1"
          FromPort: 22
          ToPort: 22
          CidrIp: "10.0.0.0/0"

  Positive1IPv4_2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow TCP on port 22 from 192.168.0.0/0"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22
          CidrIp: "192.168.0.0/0"

  Positive1ArrayTestIPv4:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow UDP on ports 22 and 110 from multiple CIDRs"
      SecurityGroupIngress:
        - IpProtocol: "udp"
          FromPort: 22
          ToPort: 22
          CidrIp: "172.16.0.0/0"
        - IpProtocol: "udp"
          FromPort: 110
          ToPort: 110
          CidrIp: "10.68.0.0"
        - IpProtocol: "udp"
          FromPort: 110
          ToPort: 110
          CidrIp: "172.16.0.0/0"
