assets/queries/cloudFormation/aws/elb_sensitive_port_is_exposed_to_entire_network/test/positive2.yaml
Resources:
  LoadBalancer01:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Listeners:
        - LoadBalancerPort: 80
          InstancePort: 80
          Protocol: HTTP
      SecurityGroups:
        - !Ref DualStackSecurityGroup

  DualStackSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for IPv4 and IPv6 ingress rules"
      VpcId: !Ref MyVPC

# IPv4 Rules
  IPv4Ingress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DualStackSecurityGroup
      IpProtocol: "17"
      FromPort: 22
      ToPort: 22
      CidrIp: "10.0.0.0/0"

  IPv4Ingress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DualStackSecurityGroup
      IpProtocol: "tcp"
      FromPort: 22
      ToPort: 22
      CidrIp: "192.168.0.0/0"

  IPv4Ingress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DualStackSecurityGroup
      IpProtocol: "udp"
      FromPort: 22
      ToPort: 22
      CidrIp: "172.16.0.0/0"

  IPv4Ingress4:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DualStackSecurityGroup
      IpProtocol: "udp"
      FromPort: 110
      ToPort: 110
      CidrIp: "172.16.0.0/0"

# IPv6 Rules
  IPv6Ingress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DualStackSecurityGroup
      IpProtocol: "-1"
      FromPort: 22
      ToPort: 22
      CidrIpv6: "fd00::/0"

  IPv6Ingress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DualStackSecurityGroup
      IpProtocol: "tcp"
      FromPort: 22
      ToPort: 22
      CidrIpv6: "fd12:3456:789a::1/0"

  IPv6Ingress3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DualStackSecurityGroup
      IpProtocol: "udp"
      FromPort: 22
      ToPort: 22
      CidrIpv6: "fd00:abcd:1234::42/0"

  IPv6Ingress4:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DualStackSecurityGroup
      IpProtocol: "udp"
      FromPort: 110
      ToPort: 110
      CidrIpv6: "fd00:abcd:1234::42/0"
